--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -1,11 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
+<Project Sdk="Microsoft.NET.Sdk.Web" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>3.0</TypeScriptToolsVersion>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <None Remove="src\app\core\core.module.ts" />
     <None Remove="src\app\core\footer\footer.component.ts" />
@@ -34,7 +37,6 @@
     <None Remove="src\app\core\services\backend\backend.service.ts" />
     <None Remove="src\app\shared\shared.module.ts" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="src\app\core\authentication\" />
     <Folder Include="src\app\core\guards\" />
@@ -44,14 +46,12 @@
     <Folder Include="src\app\shared\services\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
   </ItemGroup>
-
   <ItemGroup>
     <TypeScriptCompile Include="src\app\core\core.module.ts" />
     <TypeScriptCompile Include="src\app\core\footer\footer.component.ts" />
@@ -82,5 +82,4 @@
     <TypeScriptCompile Include="src\app\shared\components\button-selection\button-selection.spec.ts" />
     <TypeScriptCompile Include="src\app\shared\shared.module.ts" />
   </ItemGroup>
-
 </Project>
